Fix profile image being too low

--- a/src/views/profile/profile.scss
+++ b/src/views/profile/profile.scss
@@ -2,7 +2,7 @@
 @use "../../assets/styles/mixins" as *;
 
 .css-profile {
-	@apply relative;
+	@apply relative -mt-10;
 
 	&__image {
 		@apply object-cover w-28 h-36 sm:w-36 sm:h-44;
